--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
             <div class="project3">
             	<h5>Trailer Search</h5>
             	<div>
-            		<img src="images/trailerDB.png" alt="Trailer DB">
+            		<img src="images/trailerDb.png" alt="Trailer DB">
             	</div>
             	<p>The Trailer Search app provides a sneak peek into movies and TV series or shows, whether it be yet-to-release upcoming ones or long lost old ones by allowing you to look up their trailers. This could help to narrow down the answers to the question 'What to watch next?'. The app also allows you to search movies or TV shows based on the actor you are looking for and help discover more movies or shows from a particular actor that you liked.</p>
             	<div>Technology: HTML, CSS JavaScript, JQuery</div>
