--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
 	<title>Portfolio</title>
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="float-grid.css">
+	<link href="https://fonts.googleapis.com/css?family=Quattrocento" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Quattrocento+Sans" rel="stylesheet">
 	<meta name="viewport" content="width=device-width,initial-scale=1">
 </head>
 <body>
@@ -10,66 +13,99 @@
 		<div class="name">
 			<h4><a href=#>RR</a></h4>
 		</div>
-		<div>
-			<h4><a href="#about">About</a></h4>
-			<h4><a href="#projects">Projects</a></h4>
-			<h4><a href="#contact">Contact</a></h4>
-		</div>
+		
+			<div><a href="#about">About</a></div>
+			<div><a href="#projects">Projects</a></div>
+			<div><a href="#contact">Contact</a></div>
+		
 	</nav>
     <main role="main">
         <header role="banner">
-            <h1>Hi, I am Rohini.</h1>
-            <h2>Web Developer from Seattle, WA<h2>
+            <h1>Hi, I am Rohini</h1>
+            <h2>Web Developer from Seattle, WA</h2>
         </header>
 
         <section id="about">
-            <h4>About me</h4>
+            <h3>About me</h3>
            	<p>I am a full stack web developer and a recent graduate from the Web Development Bootcamp Program at Thinkful. I like to innovate and build stuff that makes life easy and organized. I enjoy coding and fixing issues as I find it as interesting as solving a puzzle. The fact that I get to see what I build is what I love about being a web developer.</p>
 			<p>Besides coding, I like being creative and I am always into learning new things. Some of my ventures include painting, crochet and DIY. I also love travel and photography.</p>
         </section>
 
-        <section id="projects">
-            <h4>My Projects</h4>
-            <div class="project1">
-            	<h5>Stock Tracker</h5>
-            	<div>
-            		<img src="images/stockTracker.png" alt="Stock Tracker">
-            	</div>
-            	<p>The Stock Tracker is an app intended to help you track and manage all your stocks from a single place and thus make a wise decision of what to sell or buy. It helps you to flourish in the ever-changing stock market by providing insight into the current market value of all your assets and their recent market fluctuations.</p>
-            	<div>Technology: HTML, CSS, React, Redux, Node.js, Express, Mongoose/MLAB, Mocha, Chai, Enzyme</div>
-            	<div>
-            		<a href="https://github.com/rohinieravi/stock-tracker-client" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
-            		<span>|</span>
-            		<a href="https://stock-tracker.netlify.com/"target="_blank" rel="noopener noreferrer">Demo</a>
-            	</div>
-
-            </div>
-            <div class="project2">
-            	<h5>Itinerary Saver</h5>
-            	<div>
-            		<img src="images/itinerarySaver.png" alt="Itinerary Saver">
-            	</div>
-            	<p>The Itinerary Saver is an app that helps to organize and save travel itineraries. Whether it be to look up a previous trip itinerary or to plan a trip in the future, this app helps to store the details of your trips for later reference. It also allows to share itineraries with others and also, view itineraries shared by others.</p>
-            	<div>Technology: HTML, CSS, JavaScript, jQuery, Node.js, Express, Mocha, Chai, Mongoose/MLAB</div>
-            	<div>
-            		<a href="https://github.com/rohinieravi/Itinerary-Saver" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
-            		<span>|</span>
-            		<a href="https://fast-savannah-13472.herokuapp.com/"target="_blank" rel="noopener noreferrer">Demo</a>
-            	</div>
-            </div>
-            <div class="project3">
-            	<h5>Trailer Search</h5>
-            	<div>
-            		<img src="images/trailerDb.png" alt="Trailer DB">
-            	</div>
-            	<p>The Trailer Search app provides a sneak peek into movies and TV series or shows, whether it be yet-to-release upcoming ones or long lost old ones by allowing you to look up their trailers. This could help to narrow down the answers to the question 'What to watch next?'. The app also allows you to search movies or TV shows based on the actor you are looking for and help discover more movies or shows from a particular actor that you liked.</p>
-            	<div>Technology: HTML, CSS JavaScript, JQuery</div>
-            	<div>
-            		<a href="https://github.com/rohinieravi/Trailer-Search" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
-            		<span>|</span>
-            		<a href="https://rohinieravi.github.io/Trailer-Search/"target="_blank" rel="noopener noreferrer">Demo</a>
-            	</div>
-            </div>
+        <section id="projects" class="halfcircle">
+            <h3>My Projects</h3>
+            <div class="row">
+            <div class="col-4">
+	            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+					<div class="flipper">
+						<div class="front">
+	            			<div class="project1">
+	            				<h4>Stock Tracker</h4>
+	            				<div>
+	            					<img src="images/stockTracker.png" alt="Stock Tracker">
+	            				</div>
+	            				<div>Skills: HTML, CSS, React, Redux, Node.js, Express, Mongoose/MLAB, Mocha, Chai, Enzyme</div>
+	            	
+	            			</div>
+	            		</div>
+	            		<div class="back">
+	            			<p>The Stock Tracker is an app intended to help you track and manage all your stocks from a single place and thus make a wise decision of what to sell or buy. It helps you to flourish in the ever-changing stock market by providing insight into the current market value of all your assets and their recent market fluctuations.</p>
+	            			<div>
+	            				<a href="https://github.com/rohinieravi/stock-tracker-client" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+	            				<span>|</span>
+	            				<a href="https://stock-tracker.netlify.com/"target="_blank" rel="noopener noreferrer">Demo</a>
+	            			</div>
+	            		</div>
+	            	</div>
+	        	</div>
+        	</div>
+        	<div class="col-4">
+	            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+					<div class="flipper">
+						<div class="front">
+	            			<div class="project2">
+		            			<h4>Itinerary Saver</h4>
+		            			<div>
+		            				<img src="images/itinerarySaver.png" alt="Itinerary Saver">
+		            			</div>
+		            			<div>Skills: HTML, CSS, JavaScript, jQuery, Node.js, Express, Mocha, Chai, Mongoose/MLAB</div>
+		            		</div>
+		            	</div>
+		            	<div class="back">	
+	            			<p>The Itinerary Saver is an app that helps to organize and save travel itineraries. Whether it be to look up a previous trip itinerary or to plan a trip in the future, this app helps to store the details of your trips for later reference. It also allows to share itineraries with others and also, view itineraries shared by others.</p>
+			            	<div>
+			            		<a href="https://github.com/rohinieravi/Itinerary-Saver" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+			            		<span>|</span>
+			            		<a href="https://fast-savannah-13472.herokuapp.com/"target="_blank" rel="noopener noreferrer">Demo</a>
+			            	</div>
+			            </div>
+			        </div>
+			    </div>
+			</div>
+			<div class="col-4">
+	            <div class="flip-container" ontouchstart="this.classList.toggle('hover');">
+					<div class="flipper">
+						<div class="front">
+	            			<div class="project3">
+	            				<h4>Trailer Search</h4>
+	            				<div>
+	            					<img src="images/trailerDb.png" alt="Trailer DB">
+	            				</div>
+	            				<div>Skills: HTML, CSS JavaScript, JQuery</div>
+	            			</div>
+	            		</div>
+	            		<div class="back">
+	            			<p>The Trailer Search app provides a sneak peek into movies and TV series or shows, whether it be yet-to-release upcoming ones or long lost old ones by allowing you to look up their trailers. The app also allows you to search movies or TV shows based on the actor you are looking for and help discover more movies or shows from a particular actor that you liked.</p>
+	            			<div>
+	            				<a href="https://github.com/rohinieravi/Trailer-Search" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
+	            				<span>|</span>
+	            				<a href="https://rohinieravi.github.io/Trailer-Search/"target="_blank" rel="noopener noreferrer">Demo</a>
+	            			</div>
+	            		</div>
+	            	</div>
+	            </div>
+	        </div>
+	    </div>
+            
         </section>
 
         <section id="contact">
