--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
             <h1>Hi, I am Rohini</h1>
             <h2>Web Developer from Seattle, WA</h2>
         </div>
+        <a href="#about"><i class="fa fa-angle-double-down fa-lg" aria-hidden="true"></i></a>
         </header>
 
         <section id="about">
         	<div class="foo">
             <h3>About me</h3>
            	<p>I am a full stack web developer and a recent graduate from the Web Development Bootcamp Program at Thinkful. I like to innovate and build stuff that makes life easy and organized. I enjoy coding and fixing issues as I find it as interesting as solving a puzzle. The fact that I get to see what I build is what I love about being a web developer.</p>
+           	<br>
 			<p>Besides coding, I like being creative and I am always into learning new things. Some of my ventures include painting, crochet and DIY. I also love travel and photography.</p>
 		</div>
         </section>
