added feedback changes

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 	            		</div>
 	            		<div class="back">
 	            			<p>The Stock Tracker is an app intended to help you track and manage all your stocks from a single place and thus make a wise decision of what to sell or buy. It helps you to flourish in the ever-changing stock market by providing insight into the current market value of all your assets and their recent market fluctuations.</p>
-	            			<div>
+	            			<div class="links">
 	            				<a href="https://github.com/rohinieravi/stock-tracker-client" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
 	            				<span>|</span>
 	            				<a href="https://stock-tracker.netlify.com/"target="_blank" rel="noopener noreferrer">Demo</a>
@@ -81,7 +81,7 @@
 		            	</div>
 		            	<div class="back">	
 	            			<p>The Itinerary Saver is an app that helps to organize and save travel itineraries. Whether it be to look up a previous trip itinerary or to plan a trip in the future, this app helps to store the details of your trips for later reference. It also allows to share itineraries with others and also, view itineraries shared by others.</p>
-			            	<div>
+			            	<div class="links">
 			            		<a href="https://github.com/rohinieravi/Itinerary-Saver" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
 			            		<span>|</span>
 			            		<a href="https://fast-savannah-13472.herokuapp.com/"target="_blank" rel="noopener noreferrer">Demo</a>
@@ -104,7 +104,7 @@
 	            		</div>
 	            		<div class="back">
 	            			<p>The Trailer Search app provides a sneak peek into movies and TV series or shows, whether it be yet-to-release upcoming ones or long lost old ones by allowing you to look up their trailers. The app also allows you to search movies or TV shows based on the actor you are looking for and help discover more movies or shows from a particular actor that you liked.</p>
-	            			<div>
+	            			<div class="links">
 	            				<a href="https://github.com/rohinieravi/Trailer-Search" target="_blank" rel="noopener noreferrer"><i class="fa fa-github fa-lg" aria-hidden="true"></i></a>
 	            				<span>|</span>
 	            				<a href="https://rohinieravi.github.io/Trailer-Search/"target="_blank" rel="noopener noreferrer">Demo</a>
