--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
         </section>
 
         <section id="projects" class="halfcircle">
-        	
+        	<div class="foo">
             <h3>My Projects</h3>
-
+        </div>
             <div class="row">
             <div class="col-4">
 	            <div class="flip-container" >
